@@ -5,7 +5,11 @@ git-core (1:1.6.5.2-2) unstable; urgency=low
     document that git-daemon is not provided by this package; add hint
     on how to enable git-daemon through inetd(8) (closes: #554215).
 
- -- Gerrit Pape <pape@smarden.org>  Mon, 09 Nov 2009 21:08:56 +0000
+  [ Jonathan Nieder ]
+  * debian/rules: drop misleading PPC_SHA1, ARM_SHA1 settings (closes:
+    #555039).
+
+ -- Gerrit Pape <pape@smarden.org>  Mon, 09 Nov 2009 21:14:33 +0000
 
 git-core (1:1.6.5.2-1) unstable; urgency=low
 
